@@ -1,5 +1,11 @@
 * CHANGES IN dplR VERSION 1.6.6
 
+File: R/rasterPlot.R
+----------------
+
+- In rasterPlot(Cairo = TRUE, ...), added a version check for the Cairo
+  package
+
 File: DESCRIPTION
 ----------------
 
